Fixed some issues with the code padding, simplified pre and code by getting rid of flex display and reducing white space through the html file.

--- a/less/portfolio.less
+++ b/less/portfolio.less
@@ -629,7 +629,7 @@ h3 {
 
 #blog code {
   // padding: 25px;
-  width: 100%;
+  // width: 100%;
 }
 
 #blog h3 {
